--- a/package.json
+++ b/package.json
@@ -15,30 +15,42 @@
   ],
   "author": "Aziz Faozi",
   "license": "GPL-v3",
+  "legacy": true,
   "bugs": {
     "url": "https://github.com/spring-guides/tut-react-and-spring-data-rest/issues"
   },
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "history": "^4.7.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
-    "rest": "^1.3.1",
     "react-router-dom": "^4.3.1",
     "redux-thunk": "^2.3.0",
+    "rest": "^1.3.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
-  }
+  },
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ]
 }
