add heroku settting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://${PSQL_URL}:${PSQL_PORT}/${PSQL_DATABASE}
+spring.datasource.username=${PSQL_USERNAME}
+spring.datasource.password=${PSQL_PASSWORD}
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
