add sql management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+
 spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.initialization-mode=always
@@ -8,3 +11,4 @@ spring.datasource.username=${PSQL_USERNAME}
 spring.datasource.password=${PSQL_PASSWORD}
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
